7.2.1 (09-06-2021)
- Bug Fix: Dissociate dcp and other objects when deleting tuition payment plan

7.2.0 (27-05-2021)
- Improvement: Refactorization to use CustomCalculatorsMap on fillProperties

7.1.2 (25-05-2021)
- Bug Fix: Add missing labels in english

7.1.1 (24-05-2021)
- Refactor: Upgrade treasury-base dependency

7.1.0 (20-05-2021)
- Bug Fix: RegistrationRegimeCondition not save regime
- New Fixture: Shared tuition payment plan between curricular plans, check if payment plan is reachable, tuition conditions, tuition installments custom calculators
- Improvement: Use default payment platform to Automatic rules and Academic services
- Improvement: Add settlement note ERP certification date
- Refactor: Replace discontinued PaymentCodePool by DigitalPaymentPlatform

7.0.5 (07-05-2021)
- Bug Fix: Retrieve SIBS entity code from sibs payment request, instead of reading from digital payment platform

7.0.4 (06-05-2021)
- Refactor: Remove not used excludeIfMatches property from AcademicDebtGenerationRuleRestriction
- Improvement: Create all person customers with student customer type and deprecate the candidate type

7.0.3 (04-05-2021)
- New Fixture: tuition payment plan now shows if is reachable
- Released module for ISCTE

7.0.2 (13-04-2021)
- Bug Fix: Invoking deprecated payment request service (UL-ISEG-552, UL-ISEG-560)

7.0.1 (12-04-2021)
- Bug Fix: Do not consider as in academic debt, debit entries in compliant open payment plans
- Improvement: Show debt report file size as kb, if the size is lower than 1MB
- Bug Fix: Validate that debt report request's endDate is not before beginDate

7.0.0 (10-04-2021)
- New Fixture: Digital Payment Platforms

6.3.0 (10-04-2021)
- Refactor: Digital Payment Platform domain model

6.2.1 (25-03-2021)
- Improvement: Segregate information included in debt report request, based in type chosen by user

6.2.0 (23-03-2021)
- New Fixture: Payment penalty taxes

6.1.0 (10-03-2021)